Fix spacing

--- a/sass/modules/_plan.sass
+++ b/sass/modules/_plan.sass
@@ -40,7 +40,11 @@ $plan-border-color: $dark-blue
   border-width: 4px
   header
     border-color: $red
+    h1
+      +rem(margin-top, 0.4rem)
+      margin-bottom: 0
     h2
+      margin: 0
       color: $dark-blue
   .plan-button
     @extend .button--important
